crates/ars-components/src/overlay/drawer/snapshots/ars_components__overlay__drawer__tests__drawer_drag_handle_without_snap_points.snap
---
source: crates/ars-components/src/overlay/drawer/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).drag_handle_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "drag-handle",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "drawer",
            ),
        ),
    ],
    styles: [],
}
